--- a/temp-webcam-stream-page/index.html
+++ b/temp-webcam-stream-page/index.html
@@ -6,6 +6,53 @@
 <body>
 <video autoplay></video>
 <script>
+    const configuration = {
+        iceServers: [{ url: 'stun:stun2.1.google.com:19302' }]
+    };
+
+    connection = new RTCPeerConnection(configuration);
+
+    const WS_URL = window.location.origin.replace(/^http/, 'ws') + '/api/v1/webcam-stream';
+    const ws = new WebSocket(WS_URL);
+
+    const sendMessage = message => {
+        ws.send(JSON.stringify(message))
+    };
+
+    const handleAnswer = answer => {
+        connection.setRemoteDescription(new RTCSessionDescription(answer))
+    };
+
+    connection.onicecandidate = event => {
+        if (event.candidate) {
+            sendMessage({
+                type: 'candidate',
+                candidate: event.candidate
+            })
+        }
+    }
+
+    ws.onopen = () => {
+        console.log(`Connected to signaling server ${WS_URL}, from streamer`);
+        sendMessage({
+            type: 'login',
+            credentials: { 'name-field': 'streamer' },
+        })
+    };
+
+    ws.onmessage = msg => {
+        console.log('Got message', msg.data)
+
+        const data = JSON.parse(msg.data);
+
+        switch (data.type) {
+            case 'answer':
+                handleAnswer(data.answer);
+                break;
+        }
+    };
+
+
     navigator.mediaDevices.getUserMedia({
         audio: true,
         video: true
@@ -15,6 +62,24 @@
         console.log(`Getting video from: ${track.label}`);
 
         document.querySelector('video').srcObject = stream;
+
+        connection.addStream(stream);
+
+        // create an offer
+        connection.createOffer(
+            offer => {
+                sendMessage({
+                    type: 'offer',
+                    offer: offer
+                });
+
+                connection.setLocalDescription(offer)
+            },
+            error => {
+                alert('Error when creating an offer');
+                console.error(error)
+            }
+        )
     })
         .catch(error => console.error(error));
 </script>
